--- a/about.html
+++ b/about.html
@@ -746,6 +746,125 @@
 
     <!-- About end  -->
 
+
+    <!-- guide start -->
+    <div class="guide-area guide-style-one pt-110" style=" margin-top: -120px;">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <div class="section-head-alpha text-center mx-auto">
+          <h2>Explore Our Paryatak Guides</h2>
+              <p>
+                At Paryatak guide, our guides are passionate about sharing their
+                deep knowledge and love for travel. They ensure every journey is
+                filled with unforgettable memories.
+              </p>
+
+          
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 col-md-6">
+           <div class="guide-card-alpha">
+  <div class="guide-image">
+    <img src="assets/images/istockphoto-168507706-612x612.jpg" alt="Guide Image" />
+    <ul class="guide-social-links">
+<li>
+  <a href="https://www.instagram.com/paryatakguide/?igsh=MXdtOGNqdmExMGF2bQ%3D%3D" target="_blank">
+    <i class="bx bxl-instagram"></i>
+  </a>
+</li>
+      <li><a href="https://www.facebook.com/profile.php?id=100095075004330&mibextid=JRoKGi" target="_blank"><i class="bx bxl-facebook"></i></a></li>
+      <li><a href="https://www.youtube.com/@Paryatak.Club01" target="_blank"><i class="bx bxl-youtube"></i></a></li>
+    </ul>
+  </div>
+  <div class="guide-content">
+    <h4 class="guide-name">Paryatak Guide</h4>
+    <!-- <h6 class="guide-designation">Ravi Verma - Tour Guide</h6> -->
+    <p class="guide-description">
+      Download the full tour and travel details in the PDF to explore more about
+      your journey.
+    </p>
+    <!-- Add the PDF link or description -->
+    <div class="pdf-download mt-2">
+      <a href="/assets/images/Travel Tips - paryatakinfo.pdf" class="btn btn-secondary" download>
+        Download Tour & Travel PDF
+      </a>
+    </div>
+  </div>
+</div>
+
+          </div>
+          <div class="col-lg-4 col-md-6">
+        <div class="guide-card-alpha">
+  <div class="guide-image">
+    <img src="assets/images/istockphoto-649356542-612x612.jpg" alt="Guide Image" />
+    <ul class="guide-social-links">
+<li>
+  <a href="https://www.instagram.com/paryatakguide/?igsh=MXdtOGNqdmExMGF2bQ%3D%3D" target="_blank">
+    <i class="bx bxl-instagram"></i>
+  </a>
+</li>      <li><a href="https://www.facebook.com/profile.php?id=100095075004330&mibextid=JRoKGi" target="_blank"><i class="bx bxl-facebook"></i></a></li>
+      <li><a href="https://www.youtube.com/@Paryatak.Club01" target="_blank"><i class="bx bxl-youtube"></i></a></li>
+    </ul>
+  </div>
+  <div class="guide-content">
+    <h4 class="guide-name">Paryatak Guide</h4>
+    <!-- <h6 class="guide-designation">Ravi Verma - Tour Guide</h6> -->
+    <p class="guide-description">
+      Download the full tour and travel details in the PDF to explore more about
+      your journey.
+    </p>
+    <!-- Add the PDF link or description -->
+    <div class="pdf-download mt-2">
+      <a href="/assets/images/Paraytakguide Location Sightseeing.pdf" class="btn btn-secondary" download>
+        Download Tour & Travel PDF
+      </a>
+    </div>
+  </div>
+</div>
+
+          </div>
+          <div class="col-lg-4 col-md-6">
+          <div class="guide-card-alpha">
+  <div class="guide-image">
+    <img src="assets/images/istockphoto-485614909-612x612.jpg" alt="Guide Image" />
+    <ul class="guide-social-links">
+<li>
+  <a href="https://www.instagram.com/paryatakguide/?igsh=MXdtOGNqdmExMGF2bQ%3D%3D" target="_blank">
+    <i class="bx bxl-instagram"></i>
+  </a>
+</li>      <li><a href="https://www.facebook.com/profile.php?id=100095075004330&mibextid=JRoKGi" target="_blank"><i class="bx bxl-facebook"></i></a></li>
+      <li><a href="https://www.youtube.com/@Paryatak.Club01" target="_blank"><i class="bx bxl-youtube"></i></a></li>
+    </ul>
+  </div>
+  <div class="guide-content">
+    <h4 class="guide-name">Paryatak Guide</h4>
+    <!-- <h6 class="guide-designation">Ravi Verma - Tour Guide</h6> -->
+    <p class="guide-description">
+      Download the full tour and travel details in the PDF to explore more about
+      your journey.
+    </p>
+    <!-- Add the PDF link or description -->
+    <div class="pdf-download mt-2">
+      <a href="/assets/images/Paryatakinfo Reference Plan-2.pdf" class="btn btn-secondary" download>
+        Download Tour & Travel PDF
+      </a>
+    </div>
+  </div>
+</div>
+
+
+          </div>
+
+          
+        </div>
+      </div>
+    </div>
+
+    <!-- guide end -->
+
     <!-- International and demestic start -->
     <div class="container">
       <h1>Location - Sightseeing Places</h1>
