--- a/destination.html
+++ b/destination.html
@@ -30,7 +30,110 @@
 
 
 </head>
+ <style>
+  
 
+   
+
+    h1 {
+      font-size: 2rem;
+      color: #0056b3;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      color: #d2691e;
+      text-align: center;
+      margin-top: 30px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 1rem;
+      margin-bottom: 15px;
+      text-align: justify;
+    }
+
+    .absolute-packages {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 20px;
+    }
+
+    .package-box {
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      overflow: hidden;
+      width: 22%;
+      margin-bottom: 20px;
+      transition: transform 0.3s ease;
+    }
+
+    .package-box:hover {
+      transform: scale(1.05);
+    }
+
+    .package-header {
+      padding: 10px;
+      text-align: center;
+      font-size: 1.2rem;
+      color: white;
+    }
+
+    .package-body {
+      padding: 15px;
+    }
+
+    .package-body h3 {
+      margin: 0;
+      font-size: 1rem;
+    }
+
+    .package-body p {
+      margin: 5px 0;
+      font-size: 1.2rem;
+      font-weight: bold;
+    }
+
+    .package-body .offer-details {
+      font-size: 1rem;
+      color: #555;
+    }
+
+    .purple {
+      background-color: #800080;
+    }
+
+    .red {
+      background-color: #ff0000;
+    }
+
+    .white {
+      background-color: #ffffff;
+      color: black;
+      border-bottom: 1px solid #ccc;
+    }
+
+    .blue {
+      background-color: #0000ff;
+    }
+
+    /* Media query for mobile view */
+    @media (max-width: 768px) {
+      .package-box {
+        width: 48%; /* Two items per row on medium screens */
+      }
+    }
+
+    @media (max-width: 480px) {
+      .package-box {
+        width: 100%; /* One item per row on small screens */
+      }
+    }
+  </style>
  
 <style>
 
@@ -612,6 +715,319 @@
 
 <br><br><br>
 
+ <div class="container">
+      <h1 class="main-heading">Hospitality Industry Ownership</h1>
+      <section class="content">
+        <h2>Make every experience count</h2>
+        <p>
+          Life is a journey. Celebrate life. Some of its moments are those that
+          we experience with our loved ones.
+        </p>
+        <p>
+          At <strong>PARYATAKGUIDE</strong>, we take you on a wonderful journey
+          infused with incredible experiences and unforgettable memories. Where
+          you can laugh, dance, sing, explore, and live the greatest moments of
+          your life and make cherished memories.
+        </p>
+        <p>
+          Your dream holiday is just around the corner, travel only with
+          <strong>PARYATAKGUIDE</strong>.
+        </p>
+        <h2>Our Promise</h2>
+        <p>
+          We stand for reliability, trust, and customer centricity. We aspire to
+          make holidaying affordable and hassle-free. Today we have 250+ hotels
+          and resorts across India and abroad and millions of magical moments on
+          offer.
+        </p>
+        <h2>Know your holidays</h2>
+        <p>
+          With <strong>PARYATAKGUIDE</strong>, a holiday means so much more!
+          It's an adventure mixed with millions of unforgettable moments for the
+          whole family. We go the extra mile to give you the best holiday
+          experience.
+        </p>
+        <p>
+          We give you 6N and 7 Days of wonderful holidays every year. To best
+          suit your holidaying needs, you may opt for various time durations
+          starting with 2 years up to 10 years.
+        </p>
+        <p>
+          We pamper you with choice across our 150+ hotels and resorts across
+          the most traveled to less-known exotic places. Choose from a variety
+          of theme vacations like adventure, relaxed, scenic, fun-filled, and
+          pilgrimage, we bring them to you at any time of your choice.
+        </p>
+        <p>
+          We give you the flexibility to gift your holidays to friends and
+          family in non-blackout periods.
+        </p>
+      </section>
+
+    
+    </div>
+
+      <!-- New Section: Absolute Packages -->
+      <section>
+        <h2
+          style="
+            font-size: 1.5rem;
+            color: #d2691e;
+            text-align: center;
+            margin-top: 30px;
+            margin-bottom: 20px;
+          "
+        >
+          Absolute Packages
+        </h2>
+        <p style="font-size: 1rem; text-align: center; margin-bottom: 20px">
+          We have designed various packages to suit individual holiday needs and
+          budgets as follows:
+        </p>
+        <div
+          style="
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+          "
+        >
+          <!-- Purple Box -->
+          <div
+            style="
+              width: 250px;
+              border-radius: 10px;
+              overflow: hidden;
+              box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+              text-align: center;
+              font-family: Arial, sans-serif;
+            "
+          >
+            <div
+              style="
+                background: #6a1b9a;
+                color: #fff;
+                padding: 10px;
+                font-size: 20px;
+                font-weight: bold;
+              "
+            >
+              PURPLE
+            </div>
+            <div style="padding: 20px; color: #333">
+              <h3 style="margin: 0; font-size: 16px">STUDIO</h3>
+              <p style="margin: 5px 0; font-size: 14px; color: #888">Amount</p>
+              <h2 style="margin: 10px 0; font-size: 24px; color: #000">
+                Rs 7,94,000
+              </h2>
+              <div
+                style="
+                  margin-top: 20px;
+                  padding: 10px;
+                  border-radius: 8px;
+                  background: #f5f5f5;
+                "
+              >
+                <span
+                  style="
+                    display: block;
+                    font-size: 16px;
+                    font-weight: bold;
+                    color: #fff;
+                    background: #6a1b9a;
+                    padding: 5px 10px;
+                    border-radius: 4px;
+                  "
+                  >IBR</span
+                >
+                <p style="margin: 5px 0; font-size: 14px; color: #888">
+                  Only with
+                </p>
+                <h3 style="margin: 0; font-size: 18px; color: #d32f2f">
+                  Rs 11,85,000
+                </h3>
+              </div>
+            </div>
+          </div>
+
+          <!-- Red Box -->
+          <div
+            style="
+              width: 250px;
+              border-radius: 10px;
+              overflow: hidden;
+              box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+              text-align: center;
+              font-family: Arial, sans-serif;
+            "
+          >
+            <div
+              style="
+                background: #d32f2f;
+                color: #fff;
+                padding: 10px;
+                font-size: 20px;
+                font-weight: bold;
+              "
+            >
+              RED
+            </div>
+            <div style="padding: 20px; color: #333">
+              <h3 style="margin: 0; font-size: 16px">STUDIO</h3>
+              <p style="margin: 5px 0; font-size: 14px; color: #888">Amount</p>
+              <h2 style="margin: 10px 0; font-size: 24px; color: #000">
+                Rs 6,45,000
+              </h2>
+              <div
+                style="
+                  margin-top: 20px;
+                  padding: 10px;
+                  border-radius: 8px;
+                  background: #f5f5f5;
+                "
+              >
+                <span
+                  style="
+                    display: block;
+                    font-size: 16px;
+                    font-weight: bold;
+                    color: #fff;
+                    background: #d32f2f;
+                    padding: 5px 10px;
+                    border-radius: 4px;
+                  "
+                  >IBR</span
+                >
+                <p style="margin: 5px 0; font-size: 14px; color: #888">
+                  Only with
+                </p>
+                <h3 style="margin: 0; font-size: 18px; color: #d32f2f">
+                  Rs 8,88,750
+                </h3>
+              </div>
+            </div>
+          </div>
+
+          <!-- White Box -->
+          <div
+            style="
+              width: 250px;
+              border-radius: 10px;
+              overflow: hidden;
+              box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+              text-align: center;
+              font-family: Arial, sans-serif;
+            "
+          >
+            <div
+              style="
+                background: #e0e0e0;
+                color: #333;
+                padding: 10px;
+                font-size: 20px;
+                font-weight: bold;
+              "
+            >
+              WHITE
+            </div>
+            <div style="padding: 20px; color: #333">
+              <h3 style="margin: 0; font-size: 16px">STUDIO</h3>
+              <p style="margin: 5px 0; font-size: 14px; color: #888">Amount</p>
+              <h2 style="margin: 10px 0; font-size: 24px; color: #000">
+                Rs 4,99,000
+              </h2>
+              <div
+                style="
+                  margin-top: 20px;
+                  padding: 10px;
+                  border-radius: 8px;
+                  background: #f5f5f5;
+                "
+              >
+                <span
+                  style="
+                    display: block;
+                    font-size: 16px;
+                    font-weight: bold;
+                    color: #fff;
+                    background: #333;
+                    padding: 5px 10px;
+                    border-radius: 4px;
+                  "
+                  >IBR</span
+                >
+                <p style="margin: 5px 0; font-size: 14px; color: #888">
+                  Only with
+                </p>
+                <h3 style="margin: 0; font-size: 18px; color: #d32f2f">
+                  Rs 6,98,500
+                </h3>
+              </div>
+            </div>
+          </div>
+
+          <!-- Blue Box -->
+          <div
+            style="
+              width: 250px;
+              border-radius: 10px;
+              overflow: hidden;
+              box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+              text-align: center;
+              font-family: Arial, sans-serif;
+            "
+          >
+            <div
+              style="
+                background: #1976d2;
+                color: #fff;
+                padding: 10px;
+                font-size: 20px;
+                font-weight: bold;
+              "
+            >
+              BLUE
+            </div>
+            <div style="padding: 20px; color: #333">
+              <h3 style="margin: 0; font-size: 16px">STUDIO</h3>
+              <p style="margin: 5px 0; font-size: 14px; color: #888">Amount</p>
+              <h2 style="margin: 10px 0; font-size: 24px; color: #000">
+                Rs 3,45,000
+              </h2>
+              <div
+                style="
+                  margin-top: 20px;
+                  padding: 10px;
+                  border-radius: 8px;
+                  background: #f5f5f5;
+                "
+              >
+                <span
+                  style="
+                    display: block;
+                    font-size: 16px;
+                    font-weight: bold;
+                    color: #fff;
+                    background: #1976d2;
+                    padding: 5px 10px;
+                    border-radius: 4px;
+                  "
+                  >IBR</span
+                >
+                <p style="margin: 5px 0; font-size: 14px; color: #888">
+                  Only with
+                </p>
+                <h3 style="margin: 0; font-size: 18px; color: #d32f2f">
+                  Rs 5,17,000
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <br><br>
+
 <!-- Pdf start -->
 
     <h1 style="text-align: center; font-weight: bolder;">Explore Our Sightseeing Memberships</h1>
@@ -666,6 +1082,8 @@
   
 
 <!-- pdf end -->
+
+
 
 
 
