--- a/index.html
+++ b/index.html
@@ -3459,96 +3459,149 @@ Couple Honeymoon Membership (CHM)</h3>
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 col-md-6">
+      <!-- Blog Card 1 -->
+      <div class="col-lg-3 col-md-6">
         <div class="blog-card-alpha">
           <div class="blog-thumb">
             <a href="index.html">
               <img
                 src="assets/images/indian pic/istockphoto-2154433338-612x612.jpg"
                 alt="Travel Blog Image 1"
+                class="img-fluid"
+                style="height: 230px; object-fit: cover; width: 100%;"
               />
             </a>
-            <div class="blog-lavel">
-              <a href="#"
-                ><i class="bi bi-calendar3"></i> August 12, 2024</a
-              >
+            <div class="blog-rating">
+              <span>⭐⭐⭐⭐⭐</span>
             </div>
           </div>
           <div class="blog-content">
             <div class="blog-body-top">
               <a href="#" class="blog-writer"
-                ><i class="bi bi-person-circle"></i> By Aditi Singh</a
+                ><i class="bi bi-person-circle"></i> Membership User</a
               >
-              <a href="https://www.facebook.com/profile.php?id=100095075004330&mibextid=JRoKGi" target="_blank" class="blog-comments"
+              <a
+                href="https://www.facebook.com/profile.php?id=100095075004330&mibextid=JRoKGi"
+                target="_blank"
+                class="blog-comments"
                 ><i class="bi bi-chat-dots-fill"></i> Comment (12)</a
               >
             </div>
             <h4 class="blog-title">
-              <a href="index.html"
-                >Exploring the Unseen Wonders of the Himalayas</a
-              >
+              <a href="index.html">
+  Exploring the <br> Himalayas
+</a>
+
             </h4>
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6">
+      <!-- Blog Card 2 -->
+      <div class="col-lg-3 col-md-6">
         <div class="blog-card-alpha">
           <div class="blog-thumb">
             <a href="index.html">
               <img
                 src="assets/images/indian pic/istockphoto-1031430214-612x612.jpg"
                 alt="Travel Blog Image 2"
-                height="200px"
+                class="img-fluid"
+                style="height: 230px; object-fit: cover; width: 100%;"
               />
             </a>
-            <div class="blog-lavel">
-              <a href="#"
-                ><i class="bi bi-calendar3"></i> August 27, 2024</a
-              >
+            <div class="blog-rating">
+              <span>⭐⭐⭐⭐</span>
             </div>
           </div>
           <div class="blog-content">
             <div class="blog-body-top">
               <a href="#" class="blog-writer"
-                ><i class="bi bi-person-circle"></i> By Raj Patel</a
+                ><i class="bi bi-person-circle"></i> Ownership User</a
               >
-              <a href="https://www.facebook.com/profile.php?id=100095075004330&mibextid=JRoKGi" target="_blank" class="blog-comments"
+              <a
+                href="https://www.facebook.com/profile.php?id=100095075004330&mibextid=JRoKGi"
+                target="_blank"
+                class="blog-comments"
                 ><i class="bi bi-chat-dots-fill"></i> Comment (08)</a
               >
             </div>
             <h4 class="blog-title">
-              <a href="index.html"
-                >Top 5 Beach Destinations in South India</a
-              >
+              <a href="index.html">
+                Explore <br> South India
+
+              </a>
             </h4>
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6">
+      <!-- Blog Card 3 -->
+      <div class="col-lg-3 col-md-6">
         <div class="blog-card-alpha">
           <div class="blog-thumb">
             <a href="index.html">
               <img
                 src="assets/images/indian pic/istockphoto-2161510610-612x612.jpg"
                 alt="Travel Blog Image 3"
-                height="200px"
+                class="img-fluid"
+                style="height: 230px; object-fit: cover; width: 100%;"
               />
             </a>
-            <div class="blog-lavel">
-              <a href="#"><i class="bi bi-calendar3"></i> September 11, 2024</a>
+            <div class="blog-rating">
+              <span>⭐⭐⭐⭐⭐</span>
             </div>
           </div>
           <div class="blog-content">
             <div class="blog-body-top">
               <a href="#" class="blog-writer"
-                ><i class="bi bi-person-circle"></i> By Neha Verma</a
+                ><i class="bi bi-person-circle"></i> Package User</a
               >
-              <a href="https://www.facebook.com/profile.php?id=100095075004330&mibextid=JRoKGi" target="_blank" class="blog-comments"
+              <a
+                href="https://www.facebook.com/profile.php?id=100095075004330&mibextid=JRoKGi"
+                target="_blank"
+                class="blog-comments"
                 ><i class="bi bi-chat-dots-fill"></i> Comment (10)</a
               >
             </div>
             <h4 class="blog-title">
-              <a href="index.html">A Culinary Journey Through Rajasthan</a>
+              <a href="index.html">
+  Culinary <br> Rajasthan
+</a>
+
+            </h4>
+          </div>
+        </div>
+      </div>
+      <!-- Blog Card 4 -->
+      <div class="col-lg-3 col-md-6">
+        <div class="blog-card-alpha">
+          <div class="blog-thumb">
+            <a href="index.html">
+              <img
+                src="assets/images/indian pic/istockphoto-1160975059-612x612.jpg"
+                alt="Travel Blog Image 4"
+                class="img-fluid"
+                style="height: 230px; object-fit: cover; width: 100%;"
+              />
+            </a>
+            <div class="blog-rating">
+              <span>⭐⭐⭐⭐</span>
+            </div>
+          </div>
+          <div class="blog-content">
+            <div class="blog-body-top">
+              <a href="#" class="blog-writer"
+                ><i class="bi bi-person-circle"></i> Offer User</a
+              >
+              <a
+                href="https://www.facebook.com/profile.php?id=100095075004330&mibextid=JRoKGi"
+                target="_blank"
+                class="blog-comments"
+                ><i class="bi bi-chat-dots-fill"></i> Comment (15)</a
+              >
+            </div>
+            <h4 class="blog-title">
+              <a href="index.html">
+                Traveling on a<br> Budget with Style
+              </a>
             </h4>
           </div>
         </div>
@@ -3556,6 +3609,7 @@ Couple Honeymoon Membership (CHM)</h3>
     </div>
   </div>
 </div>
+
 
 
     <!-- blog end -->
