--- a/list2.html
+++ b/list2.html
@@ -1,169 +1,326 @@
-<!-- Terms and Conditions Section -->
-<div class="container pt-5">
-  <h2
-    class="text-center"
-    style="font-weight: bold; font-size: 32px; margin-bottom: 20px"
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hospitality Industry Ownership</title>
+  </head>
+  <body
+    style="
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      color: #333;
+      margin: 0;
+      padding: 0;
+      background-color: #f9f9f9;
+    "
   >
-    Terms & Conditions
-  </h2>
+    <div
+      style="
+        max-width: 1200px;
+        margin: 20px auto;
+        padding: 20px;
+        background: #fff;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+      "
+    >
+      <h1
+        style="
+          font-size: 2rem;
+          color: #0056b3;
+          text-align: center;
+          margin-bottom: 20px;
+        "
+      >
+        Hospitality Industry Ownership
+      </h1>
 
-  <!-- 1. Booking Process Section -->
-  <div class="section" style="margin-bottom: 30px">
-    <h3 style="font-weight: bold; font-size: 24px; color: #8db051">
-      1. Booking Process
-    </h3>
-    <p style="font-size: 16px; color: black; line-height: 1.8">
-      All bookings are subject to availability and confirmation by Paryatak
-      Guide - Sightseeing Organiser Company. An advance booking amount of 50% of
-      the total tour cost will be required to confirm a booking. Payment
-      instructions will be provided upon booking confirmation. The balance of
-      payment must be submitted on the day of arrival, as outlined in the
-      booking confirmation.
-    </p>
-  </div>
+      <!-- Previous Content -->
+      <section>
+        <h2
+          style="
+            font-size: 1.5rem;
+            color: #d2691e;
+            text-align: center;
+            margin-top: 30px;
+            margin-bottom: 20px;
+          "
+        >
+          Make every experience count
+        </h2>
+        <p style="font-size: 1rem; margin-bottom: 15px; text-align: justify">
+          Life is a journey. Celebrate life. Some of its moments are those that
+          we experience with our loved ones.
+        </p>
+        <p style="font-size: 1rem; margin-bottom: 15px; text-align: justify">
+          At
+          <strong style="color: #333; font-weight: bold">PARYATAKGUIDE</strong>,
+          we take you on a wonderful journey infused with incredible experiences
+          and unforgettable memories. Where you can laugh, dance, sing, explore,
+          and live the greatest moments of your life and make cherished
+          memories.
+        </p>
+      </section>
 
-  <!-- 2. Cancellation & Refunds Section -->
-  <div class="section" style="margin-bottom: 30px">
-    <h3 style="font-weight: bold; font-size: 24px; color: #8db051">
-      2. Cancellation & Refunds
-    </h3>
-    <p style="font-size: 16px; color: black; line-height: 1.8">
-      Cancellation requests must be submitted in writing and will be subject to
-      the following fees:
-    </p>
-    <ul style="font-size: 16px; color: black">
-      <li>
-        More than 30 days before departure: 50% of the advance booking amount
-        will be refunded.
-      </li>
-      <li>Less than 30 days before departure: No refund.</li>
-    </ul>
-  </div>
+      <!-- New Section: Absolute Packages -->
+      <section>
+        <h2
+          style="
+            font-size: 1.5rem;
+            color: #d2691e;
+            text-align: center;
+            margin-top: 30px;
+            margin-bottom: 20px;
+          "
+        >
+          Absolute Packages
+        </h2>
+        <p style="font-size: 1rem; text-align: center; margin-bottom: 20px">
+          We have designed various packages to suit individual holiday needs and
+          budgets as follows:
+        </p>
+        <div
+          style="
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+          "
+        >
+          <!-- Purple Box -->
+          <div
+            style="
+              width: 250px;
+              border-radius: 10px;
+              overflow: hidden;
+              box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+              text-align: center;
+              font-family: Arial, sans-serif;
+            "
+          >
+            <div
+              style="
+                background: #6a1b9a;
+                color: #fff;
+                padding: 10px;
+                font-size: 20px;
+                font-weight: bold;
+              "
+            >
+              PURPLE
+            </div>
+            <div style="padding: 20px; color: #333">
+              <h3 style="margin: 0; font-size: 16px">STUDIO</h3>
+              <p style="margin: 5px 0; font-size: 14px; color: #888">Amount</p>
+              <h2 style="margin: 10px 0; font-size: 24px; color: #000">
+                Rs 7,94,000
+              </h2>
+              <div
+                style="
+                  margin-top: 20px;
+                  padding: 10px;
+                  border-radius: 8px;
+                  background: #f5f5f5;
+                "
+              >
+                <span
+                  style="
+                    display: block;
+                    font-size: 16px;
+                    font-weight: bold;
+                    color: #fff;
+                    background: #6a1b9a;
+                    padding: 5px 10px;
+                    border-radius: 4px;
+                  "
+                  >IBR</span
+                >
+                <p style="margin: 5px 0; font-size: 14px; color: #888">
+                  Only with
+                </p>
+                <h3 style="margin: 0; font-size: 18px; color: #d32f2f">
+                  Rs 11,85,000
+                </h3>
+              </div>
+            </div>
+          </div>
 
-  <!-- 3. Travel Documents Section -->
-  <div class="section" style="margin-bottom: 30px">
-    <h3 style="font-weight: bold; font-size: 24px; color: #8db051">
-      3. Travel Documents
-    </h3>
-    <p style="font-size: 16px; color: black; line-height: 1.8">
-      Customers are responsible for ensuring they have valid passports, visas,
-      and any other required travel documents for their journey. Paryatak Guide
-      - Sightseeing Organiser Company is not liable for any issues arising from
-      customers' failure to obtain the necessary travel documents.
-    </p>
-  </div>
+          <!-- Red Box -->
+          <div
+            style="
+              width: 250px;
+              border-radius: 10px;
+              overflow: hidden;
+              box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+              text-align: center;
+              font-family: Arial, sans-serif;
+            "
+          >
+            <div
+              style="
+                background: #d32f2f;
+                color: #fff;
+                padding: 10px;
+                font-size: 20px;
+                font-weight: bold;
+              "
+            >
+              RED
+            </div>
+            <div style="padding: 20px; color: #333">
+              <h3 style="margin: 0; font-size: 16px">STUDIO</h3>
+              <p style="margin: 5px 0; font-size: 14px; color: #888">Amount</p>
+              <h2 style="margin: 10px 0; font-size: 24px; color: #000">
+                Rs 6,45,000
+              </h2>
+              <div
+                style="
+                  margin-top: 20px;
+                  padding: 10px;
+                  border-radius: 8px;
+                  background: #f5f5f5;
+                "
+              >
+                <span
+                  style="
+                    display: block;
+                    font-size: 16px;
+                    font-weight: bold;
+                    color: #fff;
+                    background: #d32f2f;
+                    padding: 5px 10px;
+                    border-radius: 4px;
+                  "
+                  >IBR</span
+                >
+                <p style="margin: 5px 0; font-size: 14px; color: #888">
+                  Only with
+                </p>
+                <h3 style="margin: 0; font-size: 18px; color: #d32f2f">
+                  Rs 8,88,750
+                </h3>
+              </div>
+            </div>
+          </div>
 
-  <!-- 4. Health & Safety Section -->
-  <div class="section" style="margin-bottom: 30px">
-    <h3 style="font-weight: bold; font-size: 24px; color: #8db051">
-      4. Health & Safety
-    </h3>
-    <p style="font-size: 16px; color: black; line-height: 1.8">
-      Customers are responsible for ensuring they are in good health and
-      physical condition to participate in the tour activities. Paryatak Guide -
-      Sightseeing Organiser Company reserves the right to refuse participation
-      or remove any customer from the tour if their health or behavior
-      jeopardizes the safety or enjoyment of others.
-    </p>
-  </div>
+          <!-- White Box -->
+          <div
+            style="
+              width: 250px;
+              border-radius: 10px;
+              overflow: hidden;
+              box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+              text-align: center;
+              font-family: Arial, sans-serif;
+            "
+          >
+            <div
+              style="
+                background: #e0e0e0;
+                color: #333;
+                padding: 10px;
+                font-size: 20px;
+                font-weight: bold;
+              "
+            >
+              WHITE
+            </div>
+            <div style="padding: 20px; color: #333">
+              <h3 style="margin: 0; font-size: 16px">STUDIO</h3>
+              <p style="margin: 5px 0; font-size: 14px; color: #888">Amount</p>
+              <h2 style="margin: 10px 0; font-size: 24px; color: #000">
+                Rs 4,99,000
+              </h2>
+              <div
+                style="
+                  margin-top: 20px;
+                  padding: 10px;
+                  border-radius: 8px;
+                  background: #f5f5f5;
+                "
+              >
+                <span
+                  style="
+                    display: block;
+                    font-size: 16px;
+                    font-weight: bold;
+                    color: #fff;
+                    background: #333;
+                    padding: 5px 10px;
+                    border-radius: 4px;
+                  "
+                  >IBR</span
+                >
+                <p style="margin: 5px 0; font-size: 14px; color: #888">
+                  Only with
+                </p>
+                <h3 style="margin: 0; font-size: 18px; color: #d32f2f">
+                  Rs 6,98,500
+                </h3>
+              </div>
+            </div>
+          </div>
 
-  <!-- 5. Insurance Section -->
-  <div class="section" style="margin-bottom: 30px">
-    <h3 style="font-weight: bold; font-size: 24px; color: #8db051">
-      5. Insurance
-    </h3>
-    <p style="font-size: 16px; color: black; line-height: 1.8">
-      It is strongly recommended that customers obtain comprehensive travel
-      insurance to cover medical emergencies, trip cancellations, and other
-      unforeseen events.
-    </p>
-  </div>
-
-  <!-- 6. Liability Section -->
-  <div class="section" style="margin-bottom: 30px">
-    <h3 style="font-weight: bold; font-size: 24px; color: #8db051">
-      6. Liability
-    </h3>
-    <p style="font-size: 16px; color: black; line-height: 1.8">
-      Paryatak Guide - Sightseeing Organiser Company is not liable for any loss,
-      damage, injury, or delay resulting from circumstances beyond our control,
-      including but not limited to natural disasters, transportation
-      disruptions, or acts of third parties. Customers participate in tours and
-      activities at their own risk, and Paryatak Guide - Sightseeing Organiser
-      Company shall not be held liable for any accidents, injuries, or losses
-      incurred during the tour.
-    </p>
-  </div>
-
-  <!-- 7. Changes to Itinerary Section -->
-  <div class="section" style="margin-bottom: 30px">
-    <h3 style="font-weight: bold; font-size: 24px; color: #8db051">
-      7. Changes to Itinerary
-    </h3>
-    <p style="font-size: 16px; color: black; line-height: 1.8">
-      Paryatak Guide - Sightseeing Organiser Company reserves the right to
-      modify tour itineraries, accommodations, or activities due to unforeseen
-      circumstances or operational requirements. Customers will be notified of
-      any changes as soon as possible. In case of tour cancellation due to
-      unforeseen circumstances, customers will be offered alternative options or
-      a full refund.
-    </p>
-  </div>
-
-  <!-- 8. Code of Conduct Section -->
-  <div class="section" style="margin-bottom: 30px">
-    <h3 style="font-weight: bold; font-size: 24px; color: #8db051">
-      8. Code of Conduct
-    </h3>
-    <p style="font-size: 16px; color: black; line-height: 1.8">
-      Customers are expected to behave responsibly and respectfully towards
-      fellow travelers, tour guides, and local communities. Paryatak Guide -
-      Sightseeing Organiser Company reserves the right to remove any customer
-      from the tour for disruptive behavior, without refund.
-    </p>
-  </div>
-
-  <!-- 9. Governing Law Section -->
-  <div class="section" style="margin-bottom: 30px">
-    <h3 style="font-weight: bold; font-size: 24px; color: #8db051">
-      9. Governing Law
-    </h3>
-    <p style="font-size: 16px; color: black; line-height: 1.8">
-      These Terms & Conditions shall be governed by and construed in accordance
-      with the laws of India. Any disputes arising from these Terms & Conditions
-      shall be subject to the exclusive jurisdiction of the courts of Ghazipur,
-      Uttar Pradesh, India.
-    </p>
-  </div>
-
-  <!-- 10. Acceptance of Terms Section -->
-  <div class="section" style="margin-bottom: 30px">
-    <h3 style="font-weight: bold; font-size: 24px; color: #8db051">
-      10. Acceptance of Terms
-    </h3>
-    <p style="font-size: 16px; color: black; line-height: 1.8">
-      By booking a tour with Paryatak Guide - Sightseeing Organiser Company,
-      customers acknowledge that they have read, understood, and agree to abide
-      by these Terms & Conditions.
-    </p>
-  </div>
-
-  <!-- Paryatak Guide and Hospitality Industry Section -->
-  <div class="section" style="margin-bottom: 30px">
-    <h3 style="font-weight: bold; font-size: 24px; color: #8db051">
-      Paryatak Guide and Hospitality Industry
-    </h3>
-    <p style="font-size: 16px; color: black; line-height: 1.8">
-      Description of Services:
-    </p>
-    <ul style="font-size: 16px; color: black">
-      <li>
-        Reservation services for accommodation, cruises, and package tours.
-      </li>
-      <li>Tourist guide services.</li>
-      <li>Other travel arrangement and related services (n.e.c).</li>
-      <li>Taxi services, including radio taxi and other similar services.</li>
-      <li>Tour operator services.</li>
-    </ul>
-  </div>
-</div>
+          <!-- Blue Box -->
+          <div
+            style="
+              width: 250px;
+              border-radius: 10px;
+              overflow: hidden;
+              box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+              text-align: center;
+              font-family: Arial, sans-serif;
+            "
+          >
+            <div
+              style="
+                background: #1976d2;
+                color: #fff;
+                padding: 10px;
+                font-size: 20px;
+                font-weight: bold;
+              "
+            >
+              BLUE
+            </div>
+            <div style="padding: 20px; color: #333">
+              <h3 style="margin: 0; font-size: 16px">STUDIO</h3>
+              <p style="margin: 5px 0; font-size: 14px; color: #888">Amount</p>
+              <h2 style="margin: 10px 0; font-size: 24px; color: #000">
+                Rs 3,45,000
+              </h2>
+              <div
+                style="
+                  margin-top: 20px;
+                  padding: 10px;
+                  border-radius: 8px;
+                  background: #f5f5f5;
+                "
+              >
+                <span
+                  style="
+                    display: block;
+                    font-size: 16px;
+                    font-weight: bold;
+                    color: #fff;
+                    background: #1976d2;
+                    padding: 5px 10px;
+                    border-radius: 4px;
+                  "
+                  >IBR</span
+                >
+                <p style="margin: 5px 0; font-size: 14px; color: #888">
+                  Only with
+                </p>
+                <h3 style="margin: 0; font-size: 18px; color: #d32f2f">
+                  Rs 5,17,000
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  </body>
+</html>
