--- a/package-standard.html
+++ b/package-standard.html
@@ -612,193 +612,181 @@
         <div class="row gy-4">
     
           <!-- Special Offers Section -->
-          <!-- Rajasthan Sightseeing -->
-          <div class="col-lg-4 col-md-6">
-            <div class="package-card-alpha h-100 p-3">
-              <div class="package-thumb mb-3">
-                <a href="booknow.html">
-                  <img
-                    src="assets/images/indian pic/hawa-mahal-6156123_640.jpg"
-                    alt="Rajasthan Sightseeing"
-                    class="img-fluid rounded"
-                  />
-                </a>
-              </div>
-              <div class="package-card-body">
-                <h3 class="p-card-title text-center mb-3">
-                  <a href="booknow.html">Free Offer with Membership</a>
-                  <h6 style="color: #8db051"><b>Rajasthan Sightseeing</b></h6>
-                </h3>
-                <div
-                  class="p-card-bottom d-flex justify-content-between align-items-center mb-3"
-                >
-                  <div class="p-card-info text-start">
-                    <span>Included Locations</span>
-                    <h6 class="mb-0" style="font-size: 14px">Rajasthan</h6>
-                  </div>
-                  <div class="book-btn">
-                    <a
-                      href="booknow.html"
-                      class="btn btn-primary btn-sm"
-                      style="
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        height: 40px;
-                        width: 150px;
-                        line-height: 40px;
-                        font-size: 14px;
-                        text-align: center;
-                        padding: 0;
-                      "
-                    >
-                      Book Now
-                      <i
-                        class="bx bxs-right-arrow-alt"
-                        style="margin-left: 5px"
-                      ></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="package-details">
-                  <h4 class="mb-2">Offers</h4>
-                  <p class="mb-3">
-                    Free guided tours and entry to popular attractions.
-                  </p>
-                  <h4 class="mb-2">Price Details</h4>
-                  <p>Included with Saffron Membership.</p>
-                </div>
-              </div>
-            </div>
-          </div>
+   
 
-          <!-- Uttar Pradesh Sightseeing -->
-          <div class="col-lg-4 col-md-6">
-            <div class="package-card-alpha h-100 p-3">
-              <div class="package-thumb mb-3">
-                <a href="booknow.html">
-                  <img
-                    src="assets/images/indian pic/taj-mahal-866692_640.jpg"
-                    alt="Uttar Pradesh Sightseeing"
-                    class="img-fluid rounded"
-                    style="height: 220px"
-                  />
-                </a>
-              </div>
-              <div class="package-card-body">
-                <h3 class="p-card-title text-center mb-3">
-                  <a href="booknow.html">Free Offer with Membership</a>
-                  <h6 style="color: #8db051">
-                    <b>Uttar Pradesh Sightseeing</b>
-                  </h6>
-                </h3>
-                <div
-                  class="p-card-bottom d-flex justify-content-between align-items-center mb-3"
-                >
-                  <div class="p-card-info text-start">
-                    <span>Included Locations</span>
-                    <h6 class="mb-0" style="font-size: 14px">Uttar Pradesh</h6>
-                  </div>
-                  <div class="book-btn">
-                    <a
-                      href="booknow.html"
-                      class="btn btn-primary btn-sm"
-                      style="
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        height: 40px;
-                        width: 150px;
-                        line-height: 40px;
-                        font-size: 14px;
-                        text-align: center;
-                        padding: 0;
-                      "
-                    >
-                      Book Now
-                      <i
-                        class="bx bxs-right-arrow-alt"
-                        style="margin-left: 5px"
-                      ></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="package-details">
-                  <h4 class="mb-2">Offers</h4>
-                  <p class="mb-3">
-                    Special discounts at heritage sites and monuments.
-                  </p>
-                  <h4 class="mb-2">Price Details</h4>
-                  <p>Included with Green Membership.</p>
-                </div>
-              </div>
-            </div>
+          <div class="row">
+  <!-- Rajasthan Sightseeing -->
+  <div class="col-lg-3 col-md-4 col-sm-6">
+    <div class="package-card-alpha h-100 p-3">
+      <div class="package-thumb mb-3">
+        <a href="booknow.html">
+          <img src="assets/images/indian pic/hawa-mahal-6156123_640.jpg" alt="Rajasthan Sightseeing" class="img-fluid rounded" style="height: 220px;" />
+        </a>
+      </div>
+      <div class="package-card-body">
+        <h3 class="p-card-title text-center mb-3">
+          <a href="booknow.html">Free Offer with Membership</a>
+          <h6 style="color: #8db051"><b>Rajasthan Sightseeing</b></h6>
+        </h3>
+        <div class="p-card-bottom mb-3 d-flex justify-content-between align-items-center">
+          <div class="p-card-info text-start">
+            <span>Included Locations</span>
+            <h6 class="mb-0" style="font-size: 14px;">Rajasthan</h6>
           </div>
+          <!-- Book Now Button -->
+          <div class="book-btn">
+            <a href="booknow.html" class="btn btn-sm" style="height: 25px; width: 90px; background-color: #FF5733; color: white; font-size: 12px; padding: 0; display: flex; align-items: center; justify-content: center; text-align: center;">
+              Book Now
+              <i class="bx bxs-right-arrow-alt" style="margin-left: 5px; font-size: 16px;"></i>
+            </a>
+          </div>
+        </div>
+        <div class="package-details">
+          <h4 class="mb-2">Offers</h4>
+          <p class="mb-3">Free guided tours and entry to popular attractions.</p>
+          <h4 class="mb-2">Price Details</h4>
+          <p>Included with Saffron Membership.</p>
+        </div>
+        <!-- View Package Button -->
+       <div class="view-package-btn" style="margin-top: 15px;">
+          <a href="package.html" class="btn  btn-sm" style="width: 100%; text-align: center; font-size: 13px; padding: 0; background:  #8db051;">
+            View Package
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
 
-          <!-- 12 Jyotirling Darshan -->
-          <div class="col-lg-4 col-md-6">
-            <div class="package-card-alpha h-100 p-3">
-              <div class="package-thumb mb-3">
-                <a href="booknow.html">
-                  <img
-                    src="assets/images/indian pic/istockphoto-515855602-612x612.jpg"
-                    alt="12 Jyotirling Darshan"
-                    class="img-fluid rounded"
-                    style="height: 220px"
-                  />
-                </a>
-              </div>
-              <div class="package-card-body">
-                <h3 class="p-card-title text-center mb-3">
-                  <a href="booknow.html">Special Offer Available</a>
-                  <h6 style="color: #8db051">
-                    <b>12 Jyotirling Darshan</b>
-                  </h6>
-                </h3>
-                <div
-                  class="p-card-bottom d-flex justify-content-between align-items-center mb-3"
-                >
-                  <div class="p-card-info text-start">
-                    <span>Included Locations</span>
-                    <h6 class="mb-0" style="font-size: 14px">
-                      12 Jyotirling Darshan
-                    </h6>
-                  </div>
-                  <div class="book-btn">
-                    <a
-                      href="booknow.html"
-                      class="btn btn-primary btn-sm"
-                      style="
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-                        height: 40px;
-                        width: 150px;
-                        line-height: 40px;
-                        font-size: 14px;
-                        text-align: center;
-                        padding: 0;
-                      "
-                    >
-                      Book Now
-                      <i
-                        class="bx bxs-right-arrow-alt"
-                        style="margin-left: 5px"
-                      ></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="package-details">
-                  <h4 class="mb-2">Offers</h4>
-                  <p class="mb-3">
-                    Complimentary puja services and temple entry.
-                  </p>
-                  <h4 class="mb-2">Price Details</h4>
-                  <p>Included with Raja Rani Membership.</p>
-                </div>
-              </div>
-            </div>
+  
+  <!-- 12 Jyotirling Darshan -->
+  <div class="col-lg-3 col-md-4 col-sm-6">
+    <div class="package-card-alpha h-100 p-3">
+      <div class="package-thumb mb-3">
+        <a href="booknow.html">
+          <img src="assets/images/indian pic/istockphoto-515855602-612x612.jpg" alt="12 Jyotirling Darshan" class="img-fluid rounded" style="height: 220px" />
+        </a>
+      </div>
+      <div class="package-card-body">
+        <h3 class="p-card-title text-center mb-3">
+          <a href="booknow.html">Special Offer Available</a>
+          <h6 style="color: #8db051"><b>12 Jyotirling Darshan</b></h6>
+        </h3>
+        <div class="p-card-bottom mb-3 d-flex justify-content-between align-items-center">
+          <div class="p-card-info text-start">
+            <span>Included Locations</span>
+            <h6 class="mb-0" style="font-size: 14px">12 Jyotirling Darshan</h6>
           </div>
+          <!-- Book Now Button -->
+          <div class="book-btn">
+            <a href="booknow.html" class="btn btn-sm" style="height: 25px; width: 90px; background-color: #FF5733; color: white; font-size: 12px; padding: 0; display: flex; align-items: center; justify-content: center; text-align: center;">
+              Book Now
+              <i class="bx bxs-right-arrow-alt" style="margin-left: 5px; font-size: 16px;"></i>
+            </a>
+          </div>
+        </div>
+        <div class="package-details">
+          <h4 class="mb-2">Offers</h4>
+          <p class="mb-3">Complimentary puja services and temple entry.</p>
+          <h4 class="mb-2">Price Details</h4>
+          <p>Included with Raja Rani Membership.</p>
+        </div>
+        <!-- View Package Button -->
+       <div class="view-package-btn" style="margin-top: 15px;">
+          <a href="package.html" class="btn  btn-sm" style="width: 100%; text-align: center; font-size: 13px; padding: 0; background:  #8db051;">
+            View Package
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Uttar Pradesh Sightseeing -->
+  <div class="col-lg-3 col-md-4 col-sm-6">
+    <div class="package-card-alpha h-100 p-3">
+      <div class="package-thumb mb-3">
+        <a href="booknow.html">
+          <img src="assets/images/indian pic/taj-mahal-866692_640.jpg" alt="Uttar Pradesh Sightseeing" class="img-fluid rounded" style="height: 220px" />
+        </a>
+      </div>
+      <div class="package-card-body">
+        <h3 class="p-card-title text-center mb-3">
+          <a href="booknow.html">Free Offer with Membership</a>
+          <h6 style="color: #8db051"><b>Uttar Pradesh Sightseeing</b></h6>
+        </h3>
+        <div class="p-card-bottom mb-3 d-flex justify-content-between align-items-center">
+          <div class="p-card-info text-start">
+            <span>Included Locations</span>
+            <h6 class="mb-0" style="font-size: 14px">Uttar Pradesh</h6>
+          </div>
+          <!-- Book Now Button -->
+          <div class="book-btn">
+            <a href="booknow.html" class="btn btn-sm" style="height: 25px; width: 90px; background-color: #FF5733; color: white; font-size: 12px; padding: 0; display: flex; align-items: center; justify-content: center; text-align: center;">
+              Book Now
+              <i class="bx bxs-right-arrow-alt" style="margin-left: 5px; font-size: 16px;"></i>
+            </a>
+          </div>
+        </div>
+        <div class="package-details">
+          <h4 class="mb-2">Offers</h4>
+          <p class="mb-3">Special discounts at heritage sites and monuments.</p>
+          <h4 class="mb-2">Price Details</h4>
+          <p>Included with Green Membership.</p>
+        </div>
+        <!-- View Package Button -->
+       <div class="view-package-btn" style="margin-top: 15px;">
+          <a href="package.html" class="btn  btn-sm" style="width: 100%; text-align: center; font-size: 13px; padding: 0; background:  #8db051;">
+            View Package
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!--  Candle Light Dinner  -->
+  <div class="col-lg-3 col-md-4 col-sm-6">
+  <div class="package-card-alpha h-100 p-3">
+    <div class="package-thumb mb-3">
+      <a href="booknow.html">
+        <img src="assets/images/gallary/istockphoto-1072123100-612x612.jpg" alt="Candle Light Dinner Offer" class="img-fluid rounded" style="height: 220px"  />
+      </a>
+    </div>
+    <div class="package-card-body">
+      <h3 class="p-card-title text-center mb-3">
+        <a href="booknow.html">Free Offer with Membership</a>
+        <h6 style="color: #8db051"><b>Candle Light Dinner</b></h6>
+      </h3>
+      <div class="p-card-bottom mb-3 d-flex justify-content-between align-items-center">
+        <div class="p-card-info text-start">
+          <span>Included Locations</span>
+          <h6 class="mb-0" style="font-size: 14px;">Any city, 4 Star Property</h6>
+        </div>
+        <!-- Book Now Button -->
+        <div class="book-btn">
+          <a href="booknow.html" class="btn btn-sm" style="height: 25px; width: 90px; background-color: #FF5733; color: white; font-size: 12px; padding: 0; display: flex; align-items: center; justify-content: center; text-align: center;">
+            Book Now
+            <i class="bx bxs-right-arrow-alt" style="margin-left: 5px; font-size: 16px;"></i>
+          </a>
+        </div>
+      </div>
+      <div class="package-details">
+        <h4 class="mb-2">Offers</h4>
+        <p class="mb-3">Complimentary Candle Light Dinner at any city 4 Star Property.</p>
+        <h4 class="mb-2">Price Details</h4>
+        <p>Included with Couple Honeymoon Membership.</p>
+      </div>
+      <!-- View Package Button -->
+      <div class="view-package-btn" style="margin-top: 15px;">
+        <a href="package.html" class="btn btn-sm" style="width: 100%; text-align: center; font-size: 13px; padding: 0; background: #8db051;">
+          View Package
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+</div>
+
 
           <!-- Continue with other membership sections... -->
         </div>
